Bug 1882060 - [devtools] Cleanup code which toggles the folder gutter visibility r=devtools-reviewers,nchevobbe
These mouseover/mouseout events are for showing & hiding  the code fold gutter.
This does not actually work, and not seem to useful.

Differential Revision: https://phabricator.services.mozilla.com/D203251

--- a/devtools/client/debugger/src/components/Editor/Editor.css
+++ b/devtools/client/debugger/src/components/Editor/Editor.css
@@ -196,10 +196,6 @@ html[dir="rtl"] .editor-mount {
   border-left: none;
 }
 
-.editor-wrapper .CodeMirror-foldgutter .CodeMirror-guttermarker-subtle {
-  visibility: visible;
-}
-
 .editor-wrapper .CodeMirror-foldgutter .CodeMirror-linenumber {
   text-align: left;
   padding: 0 0 0 2px;
